# DevilMechanicalTester

./: .gitignore  package-lock.json
.github/workflows/: README.md  tauri.yml
app/: package-lock.json
app/src-tauri/: tauri.conf.json
app/src-tauri/src/: lib.rs
firmware/.cargo/: config.toml
firmware/src/: main.rs
firmware/src/usb/: mod.rs
pico-firmware/: Cargo.toml
pico-firmware/.cargo/: config.toml
pico-firmware/src/: servo.rs
pico-firmware/src/usb/: serial.rs
tauri-app/: package-lock.json  package.json  tailwind.config.js
tauri-app/src/: App.css  App.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: main.rs
